@@ -10,12 +10,27 @@ import com.fasterxml.jackson.core.JsonGenerator;
 import com.powsybl.commons.PowsyblException;
 import com.powsybl.sld.layout.LayoutParameters;
 import com.powsybl.sld.library.SldComponentTypeName;
-import com.powsybl.sld.model.cells.*;
+import com.powsybl.sld.model.cells.ArchCell;
+import com.powsybl.sld.model.cells.BusCell;
+import com.powsybl.sld.model.cells.Cell;
+import com.powsybl.sld.model.cells.ExternCell;
+import com.powsybl.sld.model.cells.InternCell;
+import com.powsybl.sld.model.cells.ShuntCell;
 import com.powsybl.sld.model.coordinate.Direction;
 import com.powsybl.sld.model.coordinate.Orientation;
 import com.powsybl.sld.model.coordinate.Point;
-import com.powsybl.sld.model.nodes.*;
+import com.powsybl.sld.model.nodes.BusNode;
+import com.powsybl.sld.model.nodes.ConnectivityNode;
+import com.powsybl.sld.model.nodes.Edge;
+import com.powsybl.sld.model.nodes.EquipmentNode;
+import com.powsybl.sld.model.nodes.FeederNode;
+import com.powsybl.sld.model.nodes.FeederType;
+import com.powsybl.sld.model.nodes.Middle2WTNode;
+import com.powsybl.sld.model.nodes.MiddleTwtNode;
+import com.powsybl.sld.model.nodes.Node;
 import com.powsybl.sld.model.nodes.Node.NodeType;
+import com.powsybl.sld.model.nodes.NodeSide;
+import com.powsybl.sld.model.nodes.SwitchNode;
 import com.powsybl.sld.model.nodes.feeders.FeederTwLeg;
 import com.powsybl.sld.util.GraphTraversal;
 import org.jgrapht.graph.Pseudograph;
@@ -52,8 +67,7 @@ public class VoltageLevelGraph extends AbstractBaseGraph {
 
     private final List<Edge> edges = new ArrayList<>();
 
-    private final SortedSet<Cell> cells = new TreeSet<>(
-            Comparator.comparingInt(Cell::getNumber)); // cells sorted to avoid randomness
+    private final SortedSet<Cell> cells = new TreeSet<>(Comparator.comparingInt(Cell::getNumber)); // cells sorted to avoid randomness
 
     private final Map<Node.NodeType, List<Node>> nodesByType = new EnumMap<>(Node.NodeType.class);
 
@@ -68,8 +82,7 @@ public class VoltageLevelGraph extends AbstractBaseGraph {
 
     private final Point coord = new Point(0, 0);
 
-    private final boolean forVoltageLevelDiagram;  // true if voltageLevel diagram
-    // false if substation diagram
+    private final boolean forVoltageLevelDiagram;  // true if voltageLevel diagram, false if substation diagram
 
     // by direction, max calculated height of the extern cells
     // If no extern cell found taking into account intern cells too
@@ -84,7 +97,7 @@ public class VoltageLevelGraph extends AbstractBaseGraph {
 
     @Override
     public String getId() {
-        return voltageLevelInfos.getId();
+        return voltageLevelInfos.id();
     }
 
     public boolean isForVoltageLevelDiagram() {
@@ -98,7 +111,7 @@ public class VoltageLevelGraph extends AbstractBaseGraph {
     public void removeUnnecessaryConnectivityNodes() {
         List<Node> fictitiousNodesToRemove = nodes.stream()
                 .filter(ConnectivityNode.class::isInstance)
-                .collect(Collectors.toList());
+                .toList();
         for (Node n : fictitiousNodesToRemove) {
             if (n.getAdjacentEdges().size() == 2) {
                 List<Node> adjNodes = n.getAdjacentNodes();
@@ -130,7 +143,7 @@ public class VoltageLevelGraph extends AbstractBaseGraph {
                 .map(SwitchNode.class::cast)
                 .filter(SwitchNode::isFictitious)
                 .filter(node -> node.getAdjacentNodes().size() == 2)
-                .collect(Collectors.toList());
+                .toList();
         for (SwitchNode n : fictitiousSwitchNodesToRemove) {
             Node node1 = n.getAdjacentNodes().get(0);
             Node node2 = n.getAdjacentNodes().get(1);
@@ -214,7 +227,7 @@ public class VoltageLevelGraph extends AbstractBaseGraph {
     @Override
     public VoltageLevelGraph getVoltageLevel(String voltageLevelId) {
         Objects.requireNonNull(voltageLevelId);
-        return voltageLevelId.equals(voltageLevelInfos.getId()) ? this : null;
+        return voltageLevelId.equals(voltageLevelInfos.id()) ? this : null;
     }
 
     @Override
@@ -286,7 +299,7 @@ public class VoltageLevelGraph extends AbstractBaseGraph {
         List<Node> nodesToHandle = new ArrayList<>(nodesIn);
         List<List<Node>> result = new ArrayList<>();
         while (!nodesToHandle.isEmpty()) {
-            Node n = nodesToHandle.get(0);
+            Node n = nodesToHandle.getFirst();
             List<Node> connexComponent = new ArrayList<>();
             rIdentifyConnexComponent(n, nodesIn, connexComponent);
             nodesToHandle.removeAll(connexComponent);
@@ -377,7 +390,7 @@ public class VoltageLevelGraph extends AbstractBaseGraph {
 
     private boolean isInternal3wtFeederNode(FeederNode feederNode) {
         return feederNode.getFeeder().getFeederType() == FeederType.THREE_WINDINGS_TRANSFORMER_LEG
-                && is3wtComponent(feederNode.getAdjacentNodes().get(0).getComponentType());
+                && is3wtComponent(feederNode.getAdjacentNodes().getFirst().getComponentType());
     }
 
     private boolean is3wtComponent(String componentName) {
@@ -391,7 +404,7 @@ public class VoltageLevelGraph extends AbstractBaseGraph {
         List<Node> adjacentNodes = feederNode.getAdjacentNodes();
         if (adjacentNodes.size() == 1) {
             // Update edges: create the 2 new ones and remove the old one
-            Node singleNeighbor = adjacentNodes.get(0);
+            Node singleNeighbor = adjacentNodes.getFirst();
             insertNode(singleNeighbor, hookNode, feederNode);
         } else {
             // Create an extra fork node, otherwise the hook-node is a node with several neighbors (fork node)
@@ -461,8 +474,8 @@ public class VoltageLevelGraph extends AbstractBaseGraph {
     public void substituteFictitiousNodesMirroringBusNodes() {
         getNodeBuses().forEach(busNode -> {
             List<Node> adjs = busNode.getAdjacentNodes();
-            if (adjs.size() == 1 && adjs.get(0).getType() == Node.NodeType.INTERNAL) {
-                Node adj = adjs.get(0);
+            if (adjs.size() == 1 && adjs.getFirst().getType() == Node.NodeType.INTERNAL) {
+                Node adj = adjs.getFirst();
                 removeEdge(adj, busNode);
                 substituteNode(adj, busNode);
             }
@@ -580,8 +593,8 @@ public class VoltageLevelGraph extends AbstractBaseGraph {
     public void addPaddingToCoord(LayoutParameters layoutParam) {
         LayoutParameters.Padding vlPadding = layoutParam.getVoltageLevelPadding();
         LayoutParameters.Padding dPadding = layoutParam.getDiagramPadding();
-        setCoord(coord.getX() + dPadding.getLeft() + vlPadding.getLeft(),
-                coord.getY() + dPadding.getTop() + vlPadding.getTop());
+        setCoord(coord.getX() + dPadding.left() + vlPadding.left(),
+                coord.getY() + dPadding.top() + vlPadding.top());
     }
 
     public void setCoord(double x, double y) {
@@ -710,7 +723,7 @@ public class VoltageLevelGraph extends AbstractBaseGraph {
                 Collections.emptySet());
         if (groundDisconnectionSetIdentified && aSwitch.get() != null && aSwitch.get().getKind() == SwitchNode.SwitchKind.DISCONNECTOR) {
             List<Node> list = setFromGround.stream().toList(); // the list contains the fork node which should not be removed but substituted
-            return new GroundDisconnection(list.subList(0, list.size() - 1), groundFeederNode, aSwitch.get(), list.get(list.size() - 1));
+            return new GroundDisconnection(list.subList(0, list.size() - 1), groundFeederNode, aSwitch.get(), list.getLast());
         }
         return null;
     }
@@ -733,7 +746,7 @@ public class VoltageLevelGraph extends AbstractBaseGraph {
         if (middleNode instanceof Middle2WTNode middle2WTNode
                 && otherSideNode instanceof FeederNode otherSideFeederNode
                 && otherSideFeederNode.getFeeder() instanceof FeederTwLeg otherSideFeederTwLeg
-                && otherSideFeederTwLeg.getOwnVoltageLevelInfos().getId().equals(voltageLevelInfos.getId())) {
+                && otherSideFeederTwLeg.getOwnVoltageLevelInfos().id().equals(voltageLevelInfos.id())) {
 
             ConnectivityNode connectivityNodeA = NodeFactory.createConnectivityNode(this, feederNode.getId(), SldComponentTypeName.NODE);
             ConnectivityNode connectivityNodeB = NodeFactory.createConnectivityNode(this, otherSideNode.getId(), SldComponentTypeName.NODE);
@@ -758,7 +771,7 @@ public class VoltageLevelGraph extends AbstractBaseGraph {
         if (neighbours.isEmpty()) {
             addEdge(nodeToInsert, adjacentNode);
         } else {
-            insertNode(adjacentNode, nodeToInsert, neighbours.get(0));
+            insertNode(adjacentNode, nodeToInsert, neighbours.getFirst());
         }
     }
 
